[package]
name = "qstash-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20" }
tower = { version = "0.4", features = ["util", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.4", features = ["trace"] }

[[bin]]
name = "qstash-simulator"
path = "src/main.rs"
